# ITM_hw2

./: .gitignore  README.md  itm_project2_PART_1.ipynb  itm_project2_PART_2_dictionaries.ipynb  itm_project2_PART_2_small_sample.ipynb  itm_project2_PART_3.ipynb  itm_project2_dictionary_creation.ipynb  itm_project2_dictionary_creation_sample.ipynb  pyproject.toml  top30_by_genre.pkl
top_30_terms_genre_latex/: 20th-century_terms_table.tex  adult-fiction_terms_table.tex  adult_terms_table.tex  adventure_terms_table.tex  american_terms_table.tex  biography_terms_table.tex  childrens_terms_table.tex  classics_terms_table.tex  contemporary_terms_table.tex  drama_terms_table.tex  fantasy_terms_table.tex  fiction_terms_table.tex  historical-fiction_terms_table.tex  historical_terms_table.tex  humor_terms_table.tex  literary-fiction_terms_table.tex  literature_terms_table.tex  mystery_terms_table.tex  non-fiction_terms_table.tex  novels_terms_table.tex  philosophy_terms_table.tex  poetry_terms_table.tex  politics_terms_table.tex  religion_terms_table.tex  romance_terms_table.tex  school_terms_table.tex  science-fiction_terms_table.tex  short-stories_terms_table.tex  unfinished_terms_table.tex  young-adult_terms_table.tex
