[project]
name = "itm-hw2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "ipykernel>=6.29.5",
    "jinja2>=3.1.5",
    "langdetect>=1.0.9",
    "matplotlib>=3.10.0",
    "nltk>=3.9.1",
    "pandarallel>=1.6.5",
    "pandas>=2.2.3",
    "regex>=2024.11.6",
    "scikit-learn>=1.6.1",
    "seaborn>=0.13.2",
    "tqdm>=4.67.1",
    "typing>=3.10.0.0",
]
